tests/ui/coroutine/pattern-borrow.stderr
error[E0626]: borrow may still be in use when coroutine yields
  --> $DIR/pattern-borrow.rs:9:24
   |
LL |     #[coroutine] move || {
   |                  ------- within this coroutine
LL |         if let Test::A(ref _a) = test {
   |                        ^^^^^^
LL |             yield ();
   |             -------- possible yield occurs here
   |
help: add `static` to mark this coroutine as unmovable
   |
LL |     #[coroutine] static move || {
   |                  ++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0626`.
